рефакторинг... Код потерял в работоспособности: не подгружаются юзеры в проекты; не подгружаются проекты к юзерам